--- a/2015/3/day-share-2015-03-04.md
+++ b/2015/3/day-share-2015-03-04.md
@@ -17,7 +17,7 @@
   > 一个跨平台 快速 轻量 2d渲染游戏库
 
 * <https://github.com/jaysalvat/buzz>
-  > 一个现代浏览器音频 播放库 基于AudioContext 个人感觉没有 howler.js好用
+  > 一个现代浏览器音频 播放库 基于AudioContext 个人感觉没有 [howler.js](https://github.com/goldfire/howler.js)好用
 
 * <https://github.com/desandro/masonry>
   > 一个强大的瀑布流布局组件
