--- a/2015/3/day-share-2015-03-04.md
+++ b/2015/3/day-share-2015-03-04.md
@@ -1,5 +1,5 @@
 #每日项目分享 2015-03-04
-##power by shuyi.wu
+##powered by shuyi.wu
 
 * <https://github.com/glyptodon/>
   > 一个屌炸天的 web 远程桌面 服务 基于 websocket 与 canvas 服务端为java
