--- a/2015/3/day-share-2015-03-05.md
+++ b/2015/3/day-share-2015-03-05.md
@@ -2,7 +2,7 @@
 ##powered by shuyi.wu
 
 #####今天没啥给力的新项目 分享一个类 [jquery](https://github.com/jquery/jquery) 实现组成 Ender
-###### 代码结构比清晰 便于学习 类似 jquery 的实现 (jquery 实在不是很 新手理解源代码)
+###### 代码结构清晰 便于学习 类似jquery的实现 (jquery 实在不是很 新手理解源代码)
 
 * <https://github.com/ender-js/Ender>
   > 比较老的实现前端js模块化的框架
