--- a/2015/3/day-share-2015-03-05.md
+++ b/2015/3/day-share-2015-03-05.md
@@ -14,7 +14,7 @@
   > Dom操作库 链式调用 支持Ender生态环境
 
 * <https://github.com/ded/qwery>
-  > dom 查询引擎 支持Ender生态环境
+  > Dom查询引擎 支持Ender生态环境
 
 * <https://github.com/ded/domready>
   > domready 回调库 支持Ender生态环境
