--- a/2015/3/day-share-2015-03-06.md
+++ b/2015/3/day-share-2015-03-06.md
@@ -2,7 +2,7 @@
 ##powered by shuyi.wu
 
 * <https://github.com/taye/interact.js>
-  > 拖拽，缩放和多点触控手势与惯性和捕捉库 只支持现代浏览器()IE8+
+  > 拖拽，缩放和多点触控手势与惯性和捕捉库 只支持现代浏览器(IE8+)
 
 * <https://github.com/ExactTarget/fuelux>
   > 扩展Twitter Bootstrap提供额外的JavaScript轻量级控件
