--- a/2015/3/day-share-2015-03-09.md
+++ b/2015/3/day-share-2015-03-09.md
@@ -8,7 +8,7 @@
   > 基于BootStrap 的 强大的日期控件
 
 * <https://github.com/masayuki0812/c3>
-  > 基于D3 的 可动态变化 的 图表库 十分强大!
+  > 基于[D3](https://github.com/mbostock/d3) 的 可动态变化 的 图表库 十分强大!
 
 * <https://github.com/driftyco/ionic>
   > 一套用于构建 混合应用 APP 的生态构架 实现了一套完整的UI 特点是 简单易用
@@ -17,4 +17,4 @@
   > 基于 jQuery 的 滚动条组件 UI 像 苹果的滚动条(由于使用的 css3 特效 所以只支持现代化浏览器 如要兼容IE8-使用 [jScrollPane](https://github.com/vitch/jScrollPane))
 
 * <https://github.com/Mottie/tablesorter>
-  > 基于 jQuery 的 表格数据 动态 排列 组件
+  > 基于 jQuery 的 表格数据 动态排列 组件
