--- a/2015/3/day-share-2015-03-09.md
+++ b/2015/3/day-share-2015-03-09.md
@@ -2,7 +2,7 @@
 ##powered by shuyi.wu
 
 * <https://github.com/Khan/KaTeX>
-  > 数学公式编辑器 特点是快速 渲染, 比起 [MathJax](https://github.com/mathjax/MathJax) 要快很多!
+  > 数学公式编辑器 特点是快速 渲染, 比起 [MathJax](https://github.com/mathjax/MathJax) 要快很多!(因为它取消了兼容低版本浏览器)
 
 * <https://github.com/Eonasdan/bootstrap-datetimepicker>
   > 基于BootStrap 的 强大的日期控件
