--- a/2015/3/day-share-2015-03-09.md
+++ b/2015/3/day-share-2015-03-09.md
@@ -18,3 +18,9 @@
 
 * <https://github.com/Mottie/tablesorter>
   > 基于 jQuery 的 表格数据 动态排列 组件
+
+* <https://github.com/konvajs/konva>
+  > Canvas 2D 框架 (新项目不是很火, 但是确实很好!)
+
+* <https://github.com/gamelab/kiwi.js>
+  > 基于CocoonJS的Canvas游戏框架  (新项目不是很火, 但是确实很好!)
