--- a/2015/3/day-share-2015-03-16.md
+++ b/2015/3/day-share-2015-03-16.md
@@ -26,7 +26,7 @@
   > 标准Hash 算法的 javascript 的实现
 
 * <https://github.com/Stuk/jszip>
-  > zip文件 操着的 javascript 的实现
+  > 对zip文件 操作的 javascript 的实现
 
 * <https://github.com/johan-gorter/maquette>
   > 简约的虚拟DOM实现 能够支持动画
