--- a/2015/3/day-share-2015-03-19.md
+++ b/2015/3/day-share-2015-03-19.md
@@ -5,13 +5,13 @@
   > 来自 mozilla 的 强大的模板引擎 拥有继承，异步控制的特性
 
 * <https://github.com/FezVrasta/bootstrap-material-design>
-  > Bootstrap 3 的 [Material design](https://github.com/Dogfalo/materialize) 主题(很华丽的主题)
+  > Bootstrap 3 的 [Google Material design](https://github.com/Dogfalo/materialize) 主题(很华丽的主题)
 
 * <https://github.com/HubSpot/tether>
   > 一个的定位引擎,用来更简单的处理 提示框 与下拉框
 
 * <https://github.com/callemall/material-ui>
-  > 一个web框架,CSS框架和js组件, 实现类似 google Material 设计风格
+  > 一个web框架,CSS框架和js组件, 实现类似 Google Material 设计风格
 
 * <https://github.com/google/material-design-icons>
   > Google Material 字体图标库
