--- a/2015/4/day-share-2015-04-09.md
+++ b/2015/4/day-share-2015-04-09.md
@@ -36,3 +36,6 @@
   
 * <https://github.com/GianlucaGuarini/Tocca.js>
   > 非常轻量的 一个 触摸库 支持  'tap' 'dbltap' 'swipeup' 'swipedown' 'swipeleft' 'swiperight'
+  
+* <https://github.com/IanLunn/Hover>
+  > 非常强大的 hover 效果库
