--- a/2015/4/day-share-2015-04-09.md
+++ b/2015/4/day-share-2015-04-09.md
@@ -20,7 +20,7 @@
   > 路径计算库, 用于游戏寻路.
   
 * <https://github.com/dataarts/dat.gui>
-  > JavaScript的一个轻量级的控制器库(来自 Google)
+  > JavaScript的一个轻量级的控制器库(来自 Google) 用它我搞了个小东西 [CSSFilters](http://wushuyi.github.io/CSSFilters/)
   
 * <https://github.com/react-bootstrap/react-bootstrap>
   > Bootstrap3 的 React 分装 使用 es6编写 与 webapck 打包. 代码值得学习!!!
